objects/Invoice__c.object
<CustomObject><fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <summarizedField>Line_Item__c.Line_Item_Total__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Choose a value from the drop-down list</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>billingAddress_acc__c</fullName>
        <label>billingAddress(acc)</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Invoice</label><nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Invoices</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith></CustomObject>